--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=vista
 spring.ai.vectorstore.mongodb.enabled=false
-spring.data.mongodb.uri=${spring.data.mongodb.uri}
+spring.data.mongodb.uri=${MONGO_URI}
 
 # File Upload Configuration
 spring.servlet.multipart.max-file-size=10MB
